started playing with working solution

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="hour">9am</div>
+        <div class="discription"></div>
+        <button class="saveBtn">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
