--- a/index.html
+++ b/index.html
@@ -30,9 +30,83 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="hour">9am</div>
-        <div class="discription"></div>
-        <button class="saveBtn">
+        <div class="hour col-xl-1" data-hour="9am">9am</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="10am">10am</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="11am">11am</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="12pm">12pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="1pm">1pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="2pm">2pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="3pm">3pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="4pm">4pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
+          <i class="fas fa-save center"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="hour col-xl-1" data-hour="5pm">5pm</div>
+        <div class="discription col-xl-10 past">
+          <p></p>
+        </div>
+        <button class="saveBtn col-xl-1">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -40,5 +114,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
