--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="0">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -43,7 +43,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="1">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -52,7 +52,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="2">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -61,7 +61,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="3">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -70,7 +70,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="4">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -79,7 +79,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="5">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -88,7 +88,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="6">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -97,7 +97,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="7">
           <i class="fas fa-save center"></i>
         </button>
       </div>
@@ -106,7 +106,7 @@
         <div class="discription col-xl-10 past">
           <p></p>
         </div>
-        <button class="saveBtn col-xl-1">
+        <button class="saveBtn col-xl-1" data-location="8">
           <i class="fas fa-save center"></i>
         </button>
       </div>
